--- a/Quizz_App/app/src/main/AndroidManifest.xml
+++ b/Quizz_App/app/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.android_portfolio.anandrasingh.quizz_app.MainActivity"
-            android:screenOrientation="portrait">
+        <activity android:name="com.android_portfolio.anandrasingh.quizz_app.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
